给索引加上了中文翻译

--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -1207,7 +1207,7 @@ v, 181, 184, 186
 
 \hangindent=3pc \hangafter=1 named fields (命名字段) 102, 107
 
-\hangindent=3pc \hangafter=1 names, rules for variable (变量的命令规则) 35
+\hangindent=3pc \hangafter=1 names, rules for variable (变量的取名规则) 35
 
 \hangindent=3pc \hangafter=1 name-value data (\mbox{名字}-值 类型的数据) 86
 
@@ -1758,539 +1758,602 @@ v, 79, 121, 167
 \hangindent=3pc \hangafter=1 record variable, \verb'$0' (记录分隔符,
 \verb'$0') 5, 35
 
-\hangindent=3pc \hangafter=1 records, lines versus 21,60
+\hangindent=3pc \hangafter=1 records, lines versus (记录与行) 21,60
 
-\hangindent=3pc \hangafter=1 records, multiline iv, 60-61,82
+\hangindent=3pc \hangafter=1 records, multiline (多行记录) iv, 60-61,82
 
-\hangindent=3pc \hangafter=1 records with headers 85
+\hangindent=3pc \hangafter=1 records with headers (带有头部的记录) 85
 
-\hangindent=3pc \hangafter=1 recursion elimination 200, 204
+\hangindent=3pc \hangafter=1 recursion elimination (消除递归) 200, 204
 
-\hangindent=3pc \hangafter=1 recursive function 54, 71, 76, 115, 160
+\hangindent=3pc \hangafter=1 recursive function (递归函数) 54, 71, 76, 115, 160
 
-\hangindent=3pc \hangafter=1 recursive-descent parsing 145, 147-148
+\hangindent=3pc \hangafter=1 recursive-descent parsing (递归下降语法分析) 145, 147-148
 
-\hangindent=3pc \hangafter=1 redirection, \verb'>' output 56, 58, 188
+\hangindent=3pc \hangafter=1 redirection, \verb'>' output (输出重定向) 56, 58, 188
 
-\hangindent=3pc \hangafter=1 redirection, \verb'>>' output 56, 58, 188
+\hangindent=3pc \hangafter=1 redirection, \verb'>>' output (输出重定向) 56, 58, 188
 
-\hangindent=3pc \hangafter=1 redirection, \verb'|' output 58, 188
+\hangindent=3pc \hangafter=1 redirection, \verb'|' output (输出重定向) 58, 188
 
-\hangindent=3pc \hangafter=1 regular expression, \verb'.' 28
+\hangindent=3pc \hangafter=1 regular expression, \verb'.'
+(正则表达式中的句点) 28
 
-\hangindent=3pc \hangafter=1 regular expression, \verb'$' 28, 119
+\hangindent=3pc \hangafter=1 regular expression, \verb'$'
+(正则表达式中的美元符) 28, 119
 
-\hangindent=3pc \hangafter=1 regular expression, \verb'^' 28, 119
+\hangindent=3pc \hangafter=1 regular expression, \verb'^' (正则表达式中的
+\verb'^') 28, 119
 
-\hangindent=3pc \hangafter=1 regular expression, \verb'()' 29
+\hangindent=3pc \hangafter=1 regular expression, \verb'()' (正则表达式中的
+\verb'()') 29
 
-\hangindent=3pc \hangafter=1 regular expression, \verb'['...\verb']' 29
+\hangindent=3pc \hangafter=1 regular expression, \verb'['...\verb']'
+(正则表达式中的 \verb'['...\verb']') 29
 
-\hangindent=3pc \hangafter=1 regular expression, \verb'[^'...\verb']' 29
+\hangindent=3pc \hangafter=1 regular expression, \verb'[^'...\verb']'
+(正则表达式中的 \verb'[^'...\verb']') 29
 
-\hangindent=3pc \hangafter=1 regular expression, \verb'|' 29, 32
+\hangindent=3pc \hangafter=1 regular expression, \verb'|' (正则表达式中的
+\verb'|') 29, 32
 
-\hangindent=3pc \hangafter=1 regular expression, \verb'*' 30
+\hangindent=3pc \hangafter=1 regular expression, \verb'*' (正则表达式中的
+\verb'*') 30
 
-\hangindent=3pc \hangafter=1 regular expression, \verb'+' 30
+\hangindent=3pc \hangafter=1 regular expression, \verb'+' (正则表达式中的
+\verb'+') 30
 
-\hangindent=3pc \hangafter=1 regular expression, \verb'?' 30
+\hangindent=3pc \hangafter=1 regular expression, \verb'?' (正则表达式中的
+\verb'?') 30
 
-\hangindent=3pc \hangafter=1 regular expression character class 29
+\hangindent=3pc \hangafter=1 regular expression character class (正则表达式中 
+的字符集) 29
 
-\hangindent=3pc \hangafter=1 regular expression, concatenation in 29
+\hangindent=3pc \hangafter=1 regular expression, concatenation in
+(正则表达式中的拼接) 29
 
-\hangindent=3pc \hangafter=1 regular expression, dynamic 40, 101, 184
+\hangindent=3pc \hangafter=1 regular expression, dynamic (动态的正则表达式) 40, 101, 184
 
-\hangindent=3pc \hangafter=1 regular expression examples 30
+\hangindent=3pc \hangafter=1 regular expression examples (正则表达式的例子) 30
 
-\hangindent=3pc \hangafter=1 regular expression field separator 52, 60, 80, 135
+\hangindent=3pc \hangafter=1 regular expression field separator
+(正则表达式字段分隔符) 52, 60, 80, 135
 
-\hangindent=3pc \hangafter=1 regular expression for floatingpoint number 30, 40
+\hangindent=3pc \hangafter=1 regular expression for floatingpoint number
+(浮点数的正则表达式) 30, 40
 
+\hangindent=3pc \hangafter=1 regular expression metacharacters (正则表达式的元字符) 28, 191
 
+\hangindent=3pc \hangafter=1 regular expression operators, precedence of
+(正则表达式运算符的优先级) 30
 
-\hangindent=3pc \hangafter=1 regular expression metacharacters 28, 191
+\hangindent=3pc \hangafter=1 regular expressions in data
+(数据中的正则表达式) 118
 
-\hangindent=3pc \hangafter=1 regular expression operators, precedence of 30
+\hangindent=3pc \hangafter=1 regular expressions, quoting in (正则表达式中的 
+引用) 29-30,41,43
 
-\hangindent=3pc \hangafter=1 regular expressions in data 118
+\hangindent=3pc \hangafter=1 regular expressions, strings as
+(字符串作为正则表达式) 40
 
-\hangindent=3pc \hangafter=1 regular expressions, quoting in 29-30,41,43
+\hangindent=3pc \hangafter=1 regular expressions, summary of
+(正则表达式的总结) 28, 191
 
-\hangindent=3pc \hangafter=1 regular expressions, strings as 40
+\hangindent=3pc \hangafter=1 regular expressions, table of (正则表达式表格) 32
 
-\hangindent=3pc \hangafter=1 regular expressions, summary of 28, 191
+\hangindent=3pc \hangafter=1 relation, universal (全局关系表) 107
 
-\hangindent=3pc \hangafter=1 regular expressions, table of 32
+\hangindent=3pc \hangafter=1 relational databases (关系数据库) iv, 102
 
-\hangindent=3pc \hangafter=1 relation, universal 107
+\hangindent=3pc \hangafter=1 relational operators (关系运算符) 25, 37
 
-\hangindent=3pc \hangafter=1 relational databases iv, 102
+\hangindent=3pc \hangafter=1 \verb'relfile' database description
+(数据库描述文件 \verb'relfile') 106
 
-\hangindent=3pc \hangafter=1 relational operators 25, 37
+\hangindent=3pc \hangafter=1 remainder operator, \verb'%' (取余运算符) 36,46
 
-\hangindent=3pc \hangafter=1 \verb'relfile' database description 106
+\hangindent=3pc \hangafter=1 report generation (生成报表) 89
 
-\hangindent=3pc \hangafter=1 remainder operator, \verb'%' 36,46
+\hangindent=3pc \hangafter=1 \verb'return' statement (\verb'return' 语句) 53
 
-\hangindent=3pc \hangafter=1 report generation 89
+\hangindent=3pc \hangafter=1 reverse input line order (逆转输入行的顺序) 50
 
-\hangindent=3pc \hangafter=1 \verb'return' statement 53
+\hangindent=3pc \hangafter=1 \verb'reverse' program (程序 \verb'reverse') 16-17
 
-\hangindent=3pc \hangafter=1 reverse input line order 50
+\hangindent=3pc \hangafter=1 reverse-Polish notation (逆波兰式表示法) 142
 
-\hangindent=3pc \hangafter=1 \verb'reverse' program 16-17
-
-\hangindent=3pc \hangafter=1 reverse-Polish notation 142
-
-\hangindent=3pc \hangafter=1 REXX language 186
+\hangindent=3pc \hangafter=1 REXX language (REXX 语言) 186
 
 \hangindent=3pc \hangafter=1 Ritchie, D. M. 66, 186
 
-\hangindent=3pc \hangafter=1 \verb'RLENGTH' variable 35-36,41
+\hangindent=3pc \hangafter=1 \verb'RLENGTH' variable (变量 \verb'RLENGTH')
+35-36,41
 
-\hangindent=3pc \hangafter=1 rounding to nearest integer 40
+\hangindent=3pc \hangafter=1 rounding to nearest integer (取整) 40
 
-\hangindent=3pc \hangafter=1 \verb'RS' variable 36, 60, 83-84
+\hangindent=3pc \hangafter=1 \verb'RS' variable (变量 \verb'RS') 36, 60, 83-84
 
-\hangindent=3pc \hangafter=1 \verb'RSTART' variable 35-36,41,189
+\hangindent=3pc \hangafter=1 \verb'RSTART' variable (变量 \verb'RSTART')
+35-36,41,189
 
-\hangindent=3pc \hangafter=1 \verb'rtsort' program 174
+\hangindent=3pc \hangafter=1 \verb'rtsort' program (程序 \verb'rtsort') 174
 
-\hangindent=3pc \hangafter=1 rules for variable names 35
+\hangindent=3pc \hangafter=1 rules for variable names (变量的取名规则) 35
 
-\hangindent=3pc \hangafter=1 running an awk program 3
+\hangindent=3pc \hangafter=1 running an awk program (运行 awk 程序) 3
 
-\hangindent=3pc \hangafter=1 running time of awk programs 183
+\hangindent=3pc \hangafter=1 running time of awk programs (awk
+程序的运行时间) 183
 
-\hangindent=3pc \hangafter=1 scaffolding 153, 156, 179
+\hangindent=3pc \hangafter=1 scaffolding (脚手架) 153, 156, 179
 
-\hangindent=3pc \hangafter=1 scalar parameter 54
+\hangindent=3pc \hangafter=1 scalar parameter (标题参数) 54
 
 \hangindent=3pc \hangafter=1 Schmitt, G. vi
 
-\hangindent=3pc \hangafter=1 scientific notation 35
+\hangindent=3pc \hangafter=1 scientific notation (科学记数法) 35
 
-\hangindent=3pc \hangafter=1 Scribe formatter 124
+\hangindent=3pc \hangafter=1 Scribe formatter (排版程序 Scribe) 124
 
-\hangindent=3pc \hangafter=1 \verb'sed' command v, 181, 184, 186
+\hangindent=3pc \hangafter=1 \verb'sed' command (命令 \verb'sed')
+v, 181, 184, 186
 
-\hangindent=3pc \hangafter=1 self-identifying data 86
+\hangindent=3pc \hangafter=1 self-identifying data (自描述数据) 86
 
-\hangindent=3pc \hangafter=1 semicolon 11, 22, 34, 47, 53, 187
+\hangindent=3pc \hangafter=1 semicolon (分号) 11, 22, 34, 47, 53, 187
 
-\hangindent=3pc \hangafter=1 semicolon as empty statement 50
+\hangindent=3pc \hangafter=1 semicolon as empty statement (空语句) 50
 
-\hangindent=3pc \hangafter=1 semicolon before \verb'else' 47
+\hangindent=3pc \hangafter=1 semicolon before \verb'else' (\verb'else'
+前的分号) 47
 
-\hangindent=3pc \hangafter=1 sentence generation 114
+\hangindent=3pc \hangafter=1 sentence generation (语句的生成) 114
 
-\hangindent=3pc \hangafter=1 sentences, random 113
+\hangindent=3pc \hangafter=1 sentences, random (随机句子) 113
 
-\hangindent=3pc \hangafter=1 \verb'sentgen' program 115, 200-201
+\hangindent=3pc \hangafter=1 \verb'sentgen' program (程序 \verb'sentgen')
+115, 200-201
 
-\hangindent=3pc \hangafter=1 separator, blank line 83
+\hangindent=3pc \hangafter=1 separator, blank line (分隔符, 空行) 83
 
-\hangindent=3pc \hangafter=1 separator, default field 5, 24
+\hangindent=3pc \hangafter=1 separator, default field (默认的字段分隔符) 5, 24
 
-\hangindent=3pc \hangafter=1 separator, input field 24, 35, 39, 60
+\hangindent=3pc \hangafter=1 separator, input field (输入的字段分隔符)
+24, 35, 39, 60
 
-\hangindent=3pc \hangafter=1 separator, output field 6, 35, 39, 55-56
+\hangindent=3pc \hangafter=1 separator, output field (输出的字段隔符)
+6, 35, 39, 55-56
 
-\hangindent=3pc \hangafter=1 separator, output record 6, 55-56,  83
+\hangindent=3pc \hangafter=1 separator, output record (输出的记录分隔符)
+6, 55-56,  83
 
-\hangindent=3pc \hangafter=1 \verb'seq' program 64
+\hangindent=3pc \hangafter=1 \verb'seq' program (程序 \verb'seq') 64
 
 \hangindent=3pc \hangafter=1 Sethi, R. 130, 152, 186
 
-\hangindent=3pc \hangafter=1 shell command interpreter 4, 65, 99
+\hangindent=3pc \hangafter=1 shell command interpreter (shell 解释器) 4, 65, 99
 
-\hangindent=3pc \hangafter=1 side-effects of assignment 43
+\hangindent=3pc \hangafter=1 side-effects of assignment (赋值的副作用) 43
 
-\hangindent=3pc \hangafter=1 side-effects of \verb'getline' 61
+\hangindent=3pc \hangafter=1 side-effects of \verb'getline' (\verb'getline'
+的副作用) 61
 
-\hangindent=3pc \hangafter=1 side-effects of input 35
+\hangindent=3pc \hangafter=1 side-effects of input (输入的副作用) 35
 
-\hangindent=3pc \hangafter=1 side-effects of \verb'sub' 43
+\hangindent=3pc \hangafter=1 side-effects of \verb'sub' (\verb'sub'
+的副作用) 43
 
-\hangindent=3pc \hangafter=1 side-effects of test 52,192
+\hangindent=3pc \hangafter=1 side-effects of test (条件判断的副作用) 52,192
 
-\hangindent=3pc \hangafter=1 side-effects on \verb'$0' 36, 43
+\hangindent=3pc \hangafter=1 side-effects on \verb'$0' (\verb'$0' 的副作用)
+36, 43
 
-\hangindent=3pc \hangafter=1 side-effects on \verb'NF' 36, 61
+\hangindent=3pc \hangafter=1 side-effects on \verb'NF' (\verb'NF' 的副作用)
+36, 61
 
-\hangindent=3pc \hangafter=1 \verb'sin' function 39
+\hangindent=3pc \hangafter=1 \verb'sin' function (函数 \verb'sin') 39
 
-\hangindent=3pc \hangafter=1 SNOBOL4 language 50, 182, 186
+\hangindent=3pc \hangafter=1 SNOBOL4 language (SNOBOL4 语言) 50, 182, 186
 
-\hangindent=3pc \hangafter=1 \verb'sort' command 8, 58, 84, 90
+\hangindent=3pc \hangafter=1 \verb'sort' command (命令 \verb'sort')
+8, 58, 84, 90
 
-\hangindent=3pc \hangafter=1 sort key 91, 127, 140
+\hangindent=3pc \hangafter=1 sort key (排序键) 91, 127, 140
 
-\hangindent=3pc \hangafter=1 \verb'sort' options 90, 94, 124, 126, 140
+\hangindent=3pc \hangafter=1 \verb'sort' options (\verb'sort' 的选项)
+90, 94, 124, 126, 140
 
-\hangindent=3pc \hangafter=1 \verb'sort' options, avoiding 91, 140
-
+\hangindent=3pc \hangafter=1 \verb'sort' options, avoiding (\verb'sort'
+选项, 避免) 91, 140
 
 % \hangindent=3pc \hangafter=1 \marginpar{210}
-\hangindent=3pc \hangafter=1 sort programs, testing 155
+\hangindent=3pc \hangafter=1 sort programs, testing (排序程序的测试) 155
 
-\hangindent=3pc \hangafter=1 sort test program, batch 155
+\hangindent=3pc \hangafter=1 sort test program, batch (排序测试程序,
+批处理模式) 155
 
-\hangindent=3pc \hangafter=1 \verb'sortgen' language 140
+\hangindent=3pc \hangafter=1 \verb'sortgen' language (\verb'sortgen' 语言) 140
 
-\hangindent=3pc \hangafter=1 \verb'sortgen' program 140
+\hangindent=3pc \hangafter=1 \verb'sortgen' program (程序 \verb'sortgen') 140
 
-\hangindent=3pc \hangafter=1 sorting address list 84
+\hangindent=3pc \hangafter=1 sorting address list (排序地址列表) 84
 
-\hangindent=3pc \hangafter=1 sorting dates 72
+\hangindent=3pc \hangafter=1 sorting dates (排序数据) 72
 
-\hangindent=3pc \hangafter=1 sorting, topological 170
+\hangindent=3pc \hangafter=1 sorting, topological (拓扑排序) 170
 
-\hangindent=3pc \hangafter=1 \verb'split' function 41,52-53, 76, 80, 84, 192
+\hangindent=3pc \hangafter=1 \verb'split' function (函数 \verb'split')
+41,52-53, 76, 80, 84, 192
 
-\hangindent=3pc \hangafter=1 \verb'sprintf' function 42, 76, 88, 189
+\hangindent=3pc \hangafter=1 \verb'sprintf' function (函数 \verb'sprintf')
+42, 76, 88, 189
 
-\hangindent=3pc \hangafter=1 \verb'sqrt' function 39
+\hangindent=3pc \hangafter=1 \verb'sqrt' function (函数 \verb'sqrt') 39
 
-\hangindent=3pc \hangafter=1 \verb'srand' function 40,111
+\hangindent=3pc \hangafter=1 \verb'srand' function (函数 \verb'srand') 40,111
 
-\hangindent=3pc \hangafter=1 stack 142,200,204
+\hangindent=3pc \hangafter=1 stack (栈) 142,200,204
 
-\hangindent=3pc \hangafter=1 standard error file 59
+\hangindent=3pc \hangafter=1 standard error file (标准错误文件) 59
 
-\hangindent=3pc \hangafter=1 standard input file 59, 66
+\hangindent=3pc \hangafter=1 standard input file (标准输入文件) 59, 66
 
-\hangindent=3pc \hangafter=1 standard input filename, \verb'-' 64, 116
+\hangindent=3pc \hangafter=1 standard input filename, \verb'-'
+(标准输入的文件名) 64, 116
 
-\hangindent=3pc \hangafter=1 standard output file 5, 56
+\hangindent=3pc \hangafter=1 standard output file (标准输出文件) 5, 56
 
-\hangindent=3pc \hangafter=1 statement, \verb'break' 49
+\hangindent=3pc \hangafter=1 statement, \verb'break' (\verb'break' 语句) 49
 
-\hangindent=3pc \hangafter=1 statement, \verb'close' 59, 82
+\hangindent=3pc \hangafter=1 statement, \verb'close' (\verb'close' 语句) 59, 82
 
-\hangindent=3pc \hangafter=1 statement, \verb'continue' 49
+\hangindent=3pc \hangafter=1 statement, \verb'continue' (\verb'continue'
+语句) 49
 
-\hangindent=3pc \hangafter=1 statement, \verb'delete' 52
+\hangindent=3pc \hangafter=1 statement, \verb'delete' (\verb'delete' 语句) 52
 
-\hangindent=3pc \hangafter=1 statement, \verb'do' 49
+\hangindent=3pc \hangafter=1 statement, \verb'do' (\verb'do' 语句) 49
 
-\hangindent=3pc \hangafter=1 statement, empty 50, 188
+\hangindent=3pc \hangafter=1 statement, empty (空语句) 50, 188
 
-\hangindent=3pc \hangafter=1 statement, \verb'exit' 49
+\hangindent=3pc \hangafter=1 statement, \verb'exit' (\verb'exit' 语句) 49
 
-\hangindent=3pc \hangafter=1 statement, \verb'for' 16, 49
+\hangindent=3pc \hangafter=1 statement, \verb'for' (\verb'for' 语句) 16, 49
 
-\hangindent=3pc \hangafter=1 statement, \verb'for' ... \verb'in' 51
+\hangindent=3pc \hangafter=1 statement, \verb'for' ... \verb'in'
+(\verb'for' ... \verb'in' 语句) 51
 
-\hangindent=3pc \hangafter=1 statement, \verb'if'-\verb'else' 14, 47
+\hangindent=3pc \hangafter=1 statement, \verb'if'-\verb'else'
+(\verb'if'-\verb'else' 语句) 14, 47
 
-\hangindent=3pc \hangafter=1 statement, \verb'next' 49
+\hangindent=3pc \hangafter=1 statement, \verb'next' (\verb'next' 语句) 49
 
-\hangindent=3pc \hangafter=1 statement, pattern-action iii, 2, 21, 34, 53, 187
+\hangindent=3pc \hangafter=1 statement, pattern-action (\patact 语句)
+iii, 2, 21, 34, 53, 187
 
-\hangindent=3pc \hangafter=1 statement, \verb'print' 5, 55
+\hangindent=3pc \hangafter=1 statement, \verb'print' (\verb'print' 语句) 5, 55
 
-\hangindent=3pc \hangafter=1 statement, \verb'printf' 7, 24, 56, 98
+\hangindent=3pc \hangafter=1 statement, \verb'printf' (\verb'printf' 语句)
+7, 24, 56, 98
 
-\hangindent=3pc \hangafter=1 statement, \verb'return' 53
+\hangindent=3pc \hangafter=1 statement, \verb'return' (\verb'return' 语句) 53
 
-\hangindent=3pc \hangafter=1 statement, \verb'while' 15, 47
+\hangindent=3pc \hangafter=1 statement, \verb'while' (\verb'while' 语句) 15, 47
 
-\hangindent=3pc \hangafter=1 statements, continuing long 15, 22, 188
+\hangindent=3pc \hangafter=1 statements, continuing long (延续长语句) 15, 22, 188
 
-\hangindent=3pc \hangafter=1 statements, summary of control-flow 48
+\hangindent=3pc \hangafter=1 statements, summary of control-flow
+(流程控制语句的总结) 48
 
-\hangindent=3pc \hangafter=1 statements, summary of output 55
+\hangindent=3pc \hangafter=1 statements, summary of output (输出语句总结) 55
 
-\hangindent=3pc \hangafter=1 status return 50, 64
+\hangindent=3pc \hangafter=1 status return (返回状态) 50, 64
 
-\hangindent=3pc \hangafter=1 string, coercion to 45
+\hangindent=3pc \hangafter=1 string, coercion to (强制转换成字符串) 45
 
-\hangindent=3pc \hangafter=1 string comparison 25-26, 44, 184
+\hangindent=3pc \hangafter=1 string comparison (字符串比较) 25-26, 44, 184
 
-\hangindent=3pc \hangafter=1 string concatenation 13, 40, 43,  47, 56, 101, 182, 184
+\hangindent=3pc \hangafter=1 string concatenation (字符串拼接)
+13, 40, 43,  47, 56, 101, 182, 184
 
-\hangindent=3pc \hangafter=1 string constant, \verb'"'...\verb'"' 7, 24, 35, 51
+\hangindent=3pc \hangafter=1 string constant, \verb'"'...\verb'"' (字符串常量)
+7, 24, 35, 51
 
-\hangindent=3pc \hangafter=1 string functions, summary of 190
+\hangindent=3pc \hangafter=1 string functions, summary of (字符串函数的总结) 190
 
-\hangindent=3pc \hangafter=1 string functions, table of 42
+\hangindent=3pc \hangafter=1 string functions, table of (字符串函数表格) 42
 
-\hangindent=3pc \hangafter=1 string, null 13, 24, 42, 114, 192
+\hangindent=3pc \hangafter=1 string, null (空字符串) 13, 24, 42, 114, 192
 
-\hangindent=3pc \hangafter=1 string, numeric value of a 45
+\hangindent=3pc \hangafter=1 string, numeric value of a (字符串的数值值) 45
 
-\hangindent=3pc \hangafter=1 string or number 44
+\hangindent=3pc \hangafter=1 string or number (字符串还是数值) 44
 
-\hangindent=3pc \hangafter=1 string to number coercion 25
+\hangindent=3pc \hangafter=1 string to number coercion (字符串强制转换成数值) 25
 
-\hangindent=3pc \hangafter=1 string to number conversion 35, 44, 192
+\hangindent=3pc \hangafter=1 string to number conversion (字符串转换成数值)
+35, 44, 192
 
-\hangindent=3pc \hangafter=1 string variables 12,44
+\hangindent=3pc \hangafter=1 string variables (字符串变量) 12,44
 
-\hangindent=3pc \hangafter=1 string-matching pattern 26
+\hangindent=3pc \hangafter=1 string-matching pattern (字符串匹配模式) 26
 
-\hangindent=3pc \hangafter=1 string-matching patterns, summary of 27
+\hangindent=3pc \hangafter=1 string-matching patterns, summary of (字符串匹 
+配模式的总结) 27
 
-\hangindent=3pc \hangafter=1 strings as regular expressions 40
+\hangindent=3pc \hangafter=1 strings as regular expressions
+(字符串作为正则表达式) 40
 
-\hangindent=3pc \hangafter=1 \verb'sub' function 42, 182
+\hangindent=3pc \hangafter=1 \verb'sub' function (函数 \verb'sub') 42, 182
 
-\hangindent=3pc \hangafter=1 \verb'sub', side-effects of 43
+\hangindent=3pc \hangafter=1 \verb'sub', side-effects of (\verb'sub'
+的副作用) 43
 
-\hangindent=3pc \hangafter=1 subscripts, array 50-52
+\hangindent=3pc \hangafter=1 subscripts, array (数组的下标) 50-52
 
-\hangindent=3pc \hangafter=1 subscripts, numeric 52
+\hangindent=3pc \hangafter=1 subscripts, numeric (数值下标) 52
 
-\hangindent=3pc \hangafter=1 \verb'SUBSEP' variable 36, 53
+\hangindent=3pc \hangafter=1 \verb'SUBSEP' variable (变量 \verb'SUBSEP') 36, 53
 
-\hangindent=3pc \hangafter=1 \verb'subset' function 109
+\hangindent=3pc \hangafter=1 \verb'subset' function (函数 \verb'subset') 109
 
-\hangindent=3pc \hangafter=1 substitution, \verb'&' in 43, 72, 189
+\hangindent=3pc \hangafter=1 substitution, \verb'&' in (字符串替换中的
+\verb'&') 43, 72, 189
 
-\hangindent=3pc \hangafter=1 \verb'substr' function 43, 72
+\hangindent=3pc \hangafter=1 \verb'substr' function (函数 \verb'substr') 43, 72
 
-\hangindent=3pc \hangafter=1 substring 24
+\hangindent=3pc \hangafter=1 substring (子字符串) 24
 
-\hangindent=3pc \hangafter=1 successor node 170
+\hangindent=3pc \hangafter=1 successor node (后继节点) 170
 
-\hangindent=3pc \hangafter=1 successor-list data structure 171
+\hangindent=3pc \hangafter=1 successor-list data structure (后继节点列表) 171
 
-\hangindent=3pc \hangafter=1 \verb'suffix' function 105
+\hangindent=3pc \hangafter=1 \verb'suffix' function (函数 \verb'suffix') 105
 
+\hangindent=3pc \hangafter=1 \verb'sum1' program (程序 \verb'sum1') 68
 
+\hangindent=3pc \hangafter=1 \verb'sum2' program (程序 \verb'sum2') 68
 
+\hangindent=3pc \hangafter=1 \verb'sum3' program (程序 \verb'sum3') 69
 
+\hangindent=3pc \hangafter=1 \verb'sumcomma' program (程序 \verb'sumcomma') 71
 
+\hangindent=3pc \hangafter=1 summary of actions (动作的总结) 34,188
 
+\hangindent=3pc \hangafter=1 summary of arithmetic functions (算术函数总结) 190
 
-\hangindent=3pc \hangafter=1 \verb'sum1' program 68
+\hangindent=3pc \hangafter=1 summary of control-flow statements
+(流程控制语句的总结) 48
 
-\hangindent=3pc \hangafter=1 \verb'sum2' program 68
+\hangindent=3pc \hangafter=1 summary of expressions (表达式的总结) 37
 
-\hangindent=3pc \hangafter=1 \verb'sum3' program 69
+\hangindent=3pc \hangafter=1 summary of input-output (输入输出总结) 188
 
-\hangindent=3pc \hangafter=1 \verb'sumcomma' program 71
+\hangindent=3pc \hangafter=1 summary of operators (运算符总结) 190
 
-\hangindent=3pc \hangafter=1 summary of actions 34,188
+\hangindent=3pc \hangafter=1 summary of output statements (输出语句总结) 55
 
-\hangindent=3pc \hangafter=1 summary of arithmetic functions 190
+\hangindent=3pc \hangafter=1 summary of patterns (模式的总结) 23,187
 
-\hangindent=3pc \hangafter=1 summary of control-flow statements 48
+\hangindent=3pc \hangafter=1 summary of \verb'printf' speciflcations
+(\verb'printf' 格式说明符的总结) 189
 
-\hangindent=3pc \hangafter=1 summary of expressions 37
+\hangindent=3pc \hangafter=1 summary of regular expressions (正则表达式的总结)
+28, 191
 
-\hangindent=3pc \hangafter=1 summary of input-output 188
+\hangindent=3pc \hangafter=1 summary of string functions (字符串函数的总结) 190
 
-\hangindent=3pc \hangafter=1 summary of operators 190
+\hangindent=3pc \hangafter=1 summary of string-matching patterns (字符串匹配 
+模式的总结) 27
 
-\hangindent=3pc \hangafter=1 summary of output statements 55
-
-\hangindent=3pc \hangafter=1 summary of patterns 23,187
-
-\hangindent=3pc \hangafter=1 summary of \verb'printf' speciflcations 189
-
-\hangindent=3pc \hangafter=1 summary of regular expressions 28, 191
-
-\hangindent=3pc \hangafter=1 summary of string functions 190
-
-\hangindent=3pc \hangafter=1 summary of string-matching patterns 27
-
-\hangindent=3pc \hangafter=1 summing columns 67
+\hangindent=3pc \hangafter=1 summing columns (列求和) 67
 
 \hangindent=3pc \hangafter=1 Swartwout, D. vi
 
-\hangindent=3pc \hangafter=1 symbol table 131, 134, 152
+\hangindent=3pc \hangafter=1 symbol table (符号表) 131, 134, 152
 
-\hangindent=3pc \hangafter=1 syntax error 4
+\hangindent=3pc \hangafter=1 syntax error (语法错误) 4
 
-\hangindent=3pc \hangafter=1 system function 59, 64
+\hangindent=3pc \hangafter=1 system function (系统函数) 59, 64
 
-\hangindent=3pc \hangafter=1 tab character, \verb'\t' 15, 24, 31
+\hangindent=3pc \hangafter=1 tab character, \verb'\t' (制表符) 15, 24, 31
 
-\hangindent=3pc \hangafter=1 table, base 106
+\hangindent=3pc \hangafter=1 table, base (基表) 106
 
-\hangindent=3pc \hangafter=1 table, database 103
+\hangindent=3pc \hangafter=1 table, database (数据库的表) 103
 
-\hangindent=3pc \hangafter=1 table, derived 106
+\hangindent=3pc \hangafter=1 table, derived (导出表) 106
 
-\hangindent=3pc \hangafter=1 table formatting 95
+\hangindent=3pc \hangafter=1 table formatting (表格的格式化) 95
 
-\hangindent=3pc \hangafter=1 table of arithmetic functions 39
+\hangindent=3pc \hangafter=1 table of arithmetic functions (算术函数表格) 39
 
-\hangindent=3pc \hangafter=1 table of arithmetic operators 46
+\hangindent=3pc \hangafter=1 table of arithmetic operators (算术运算符表格) 46
 
-\hangindent=3pc \hangafter=1 table of assembler instructions 132
+\hangindent=3pc \hangafter=1 table of assembler instructions (汇编指令表格) 132
 
-\hangindent=3pc \hangafter=1 table of built-in variables 36
+\hangindent=3pc \hangafter=1 table of built-in variables (内建变量表格) 36
 
-\hangindent=3pc \hangafter=1 table of comparison operators 25
+\hangindent=3pc \hangafter=1 table of comparison operators (比较运算符表格) 25
 
-\hangindent=3pc \hangafter=1 table of escape sequences 31
+\hangindent=3pc \hangafter=1 table of escape sequences (转义序列表格) 31
 
-\hangindent=3pc \hangafter=1 table of \verb'getline' forms 62
+\hangindent=3pc \hangafter=1 table of \verb'getline' forms (\verb'getline'
+的形式) 62
 
-\hangindent=3pc \hangafter=1 table of patterns 33
+\hangindent=3pc \hangafter=1 table of patterns (模式表格) 33
 
-\hangindent=3pc \hangafter=1 table of performance measurements 183
+\hangindent=3pc \hangafter=1 table of performance measurements (性能测试表格)
+183
 
-\hangindent=3pc \hangafter=1 table of \verb'printf' examples 57
+\hangindent=3pc \hangafter=1 table of \verb'printf' examples (\verb'printf'
+的例子) 57
 
-\hangindent=3pc \hangafter=1 table of \verb'printf' specifications 57
+\hangindent=3pc \hangafter=1 table of \verb'printf' specifications
+(\verb'printf' 的格式说明符) 57
 
-\hangindent=3pc \hangafter=1 table of regular expressions 32
+\hangindent=3pc \hangafter=1 table of regular expressions (正则表达式表格) 32
 
-\hangindent=3pc \hangafter=1 table of string functions 42
+\hangindent=3pc \hangafter=1 table of string functions (字符串函数表格) 42
 
-\hangindent=3pc \hangafter=1 \verb'table' program 98
+\hangindent=3pc \hangafter=1 \verb'table' program (程序 \verb'table') 98
 
-\hangindent=3pc \hangafter=1 table, symbol 131,134,152
+\hangindent=3pc \hangafter=1 table, symbol (符号表) 131,134,152
 
-\hangindent=3pc \hangafter=1 \verb'table1' program 196
+\hangindent=3pc \hangafter=1 \verb'table1' program (程序 \verb'table1') 196
 
-\hangindent=3pc \hangafter=1 \verb'tbl' command 95
+\hangindent=3pc \hangafter=1 \verb'tbl' command (命令 \verb'tbl') 95
 
-\hangindent=3pc \hangafter=1 terminal symbol 113, 145
+\hangindent=3pc \hangafter=1 terminal symbol (终结符) 113, 145
 
-\hangindent=3pc \hangafter=1 test framework program 159
+\hangindent=3pc \hangafter=1 test framework program (测试框架程序) 159
 
-\hangindent=3pc \hangafter=1 test program, interactive 157
+\hangindent=3pc \hangafter=1 test program, interactive (交互式的测试程序) 157
 
-\hangindent=3pc \hangafter=1 test, side-effects of 52, 192
+\hangindent=3pc \hangafter=1 test, side-effects of (条件判断的副作用) 52, 192
 
-\hangindent=3pc \hangafter=1 testing, boundary condition 155
+\hangindent=3pc \hangafter=1 testing, boundary condition (边界条件测试) 155
 
-\hangindent=3pc \hangafter=1 testing, interactive 156
+\hangindent=3pc \hangafter=1 testing, interactive (交互式的测试) 156
 
-\hangindent=3pc \hangafter=1 testing sort programs 155
+\hangindent=3pc \hangafter=1 testing sort programs (测试排序程序) 155
 
-\hangindent=3pc \hangafter=1 TEX formatter 120,124
+\hangindent=3pc \hangafter=1 TEX formatter (排序测试 TEX) 120,124
 
-\hangindent=3pc \hangafter=1 text justification 98, 201
+\hangindent=3pc \hangafter=1 text justification (测试验证) 98, 201
 
-\hangindent=3pc \hangafter=1 timing tests 183
+\hangindent=3pc \hangafter=1 timing tests (计时测试) 183
 
-\hangindent=3pc \hangafter=1 Toolchest vi
+\hangindent=3pc \hangafter=1 Toolchest (工具箱) vi
 
-\hangindent=3pc \hangafter=1 topological sort algorithm 171
+\hangindent=3pc \hangafter=1 topological sort algorithm (拓扑排序程序) 171
 
-\hangindent=3pc \hangafter=1 topological sorting 170
+\hangindent=3pc \hangafter=1 topological sorting (拓扑排序) 170
 
-\hangindent=3pc \hangafter=1 \verb'tr' command 201
+\hangindent=3pc \hangafter=1 \verb'tr' command (命令 \verb'tr') 201
 
-\hangindent=3pc \hangafter=1 translator model 131
+\hangindent=3pc \hangafter=1 translator model (翻译器模型) 131
 
-\hangindent=3pc \hangafter=1 \verb'transpose' program 204
+\hangindent=3pc \hangafter=1 \verb'transpose' program (程序
+\verb'transpose') 204
 
-\hangindent=3pc \hangafter=1 tree, binary 163
+\hangindent=3pc \hangafter=1 tree, binary (二叉树) 163
 
 \hangindent=3pc \hangafter=1 Trickey, H. W. vi
 
-\hangindent=3pc \hangafter=1 \verb'troff' command 120,124-125, 127, 139
+\hangindent=3pc \hangafter=1 \verb'troff' command (命令 \verb'troff')
+120,124-125, 127, 139
 
-\hangindent=3pc \hangafter=1 \verb'tsort' program 172
-
-
-
-
+\hangindent=3pc \hangafter=1 \verb'tsort' program (程序 \verb'tsort') 172
 
 \hangindent=3pc \hangafter=1 Ullman, J. D. 110,152, 179
 
-\hangindent=3pc \hangafter=1 \verb'unbundle' program 82
+\hangindent=3pc \hangafter=1 \verb'unbundle' program (程序 \verb'unbundle') 82
 
-\hangindent=3pc \hangafter=1 underscore, \verb'-' 35
+\hangindent=3pc \hangafter=1 underscore, \verb'-' (下划线) 35
 
-\hangindent=3pc \hangafter=1 \verb'unget' function 105
+\hangindent=3pc \hangafter=1 \verb'unget' function (函数 \verb'unget') 105
 
-\hangindent=3pc \hangafter=1 uninitialized variables 51, 58
+\hangindent=3pc \hangafter=1 uninitialized variables (未初始化的变量) 51, 58
 
-\hangindent=3pc \hangafter=1 universal relation 107
+\hangindent=3pc \hangafter=1 universal relation (全局关系表) 107
 
-\hangindent=3pc \hangafter=1 update algorithm, \verb'make' 176
+\hangindent=3pc \hangafter=1 update algorithm, \verb'make' (\verb'make'
+的更新算法) 176
 
-\hangindent=3pc \hangafter=1 updating, file 175
+\hangindent=3pc \hangafter=1 updating, file (文件的更新) 175
 
-\hangindent=3pc \hangafter=1 user-defined functions 53, 182,  187
+\hangindent=3pc \hangafter=1 user-defined functions (用户自定义函数) 
+53, 182,  187
 
-\hangindent=3pc \hangafter=1 value of a string, numeric 45
+\hangindent=3pc \hangafter=1 value of a string, numeric (字符串的数值值) 45
 
-\hangindent=3pc \hangafter=1 value of comparison expression 37
+\hangindent=3pc \hangafter=1 value of comparison expression (比较表达式的值) 37
 
-\hangindent=3pc \hangafter=1 value of logical expression 37
+\hangindent=3pc \hangafter=1 value of logical expression (逻辑表达式的值) 37
 
 \hangindent=3pc \hangafter=1 van Eick. P. vi
 
 \hangindent=3pc \hangafter=1 VanWyk,C.J. vi
 
-\hangindent=3pc \hangafter=1 variable, \verb'$0' record 5, 35
+\hangindent=3pc \hangafter=1 variable, \verb'$0' record (变量, \verb'$0') 5, 35
 
-\hangindent=3pc \hangafter=1 variable, \verb'ARGC' 36, 63, 189
+\hangindent=3pc \hangafter=1 variable, \verb'ARGC' (变量 \verb'ARGC')
+36, 63, 189
 
-\hangindent=3pc \hangafter=1 variable, \verb'ARGV' 36, 63-65, 116, 189
+\hangindent=3pc \hangafter=1 variable, \verb'ARGV' (变量 \verb'ARGV')
+36, 63-65, 116, 189
 
-\hangindent=3pc \hangafter=1 variable assignment, command line 63
+\hangindent=3pc \hangafter=1 variable assignment, command line
+(命令行的变量赋值) 63
 
-\hangindent=3pc \hangafter=1 variable, \verb'FILENAME' 33, 35-36, 81, 103
+\hangindent=3pc \hangafter=1 variable, \verb'FILENAME' (变量
+\verb'FILENAME') 33, 35-36, 81, 103
 
-\hangindent=3pc \hangafter=1 variable, \verb'FNR' 33, 35-36, 61
+\hangindent=3pc \hangafter=1 variable, \verb'FNR' (变量 \verb'FNR') 33, 35-36, 61
 
-\hangindent=3pc \hangafter=1 variable, \verb'FS' 24, 35-36, 52, 60, 83, 135, 187
+\hangindent=3pc \hangafter=1 variable, \verb'FS' (变量 \verb'FS')
+24, 35-36, 52, 60, 83, 135, 187
 
-\hangindent=3pc \hangafter=1 variable names, rules for 35
+\hangindent=3pc \hangafter=1 variable names, rules for (变量的取名规则) 35
 
-\hangindent=3pc \hangafter=1 variable, \verb'NF' 6, 14, 35-36, 61
+\hangindent=3pc \hangafter=1 variable, \verb'NF' (变量 \verb'NF')
+6, 14, 35-36, 61
 
-\hangindent=3pc \hangafter=1 variable, \verb'NR' 6, 12, 14, 35-36, 61
+\hangindent=3pc \hangafter=1 variable, \verb'NR' (变量 \verb'NR')
+6, 12, 14, 35-36, 61
 
-\hangindent=3pc \hangafter=1 variable, \verb'OFMT' 36, 45
+\hangindent=3pc \hangafter=1 variable, \verb'OFMT' (变量 \verb'OFMT') 36, 45
 
-\hangindent=3pc \hangafter=1 variable, \verb'OFS' 35-36, 43, 55-56
+\hangindent=3pc \hangafter=1 variable, \verb'OFS' (变量 \verb'OFS')
+35-36, 43, 55-56
 
-\hangindent=3pc \hangafter=1 variable, \verb'ORS' 36, 55-56, 83
+\hangindent=3pc \hangafter=1 variable, \verb'ORS' (变量 \verb'ORS') 36, 55-56, 83
 
-\hangindent=3pc \hangafter=1 variable, \verb'RLENGTH' 35-36, 41
+\hangindent=3pc \hangafter=1 variable, \verb'RLENGTH' (变量 \verb'RLENGTH')
+35-36, 41
 
-\hangindent=3pc \hangafter=1 variable, \verb'RS' 36, 60, 83-84
+\hangindent=3pc \hangafter=1 variable, \verb'RS' (变量 \verb'RS') 36, 60, 83-84
 
-\hangindent=3pc \hangafter=1 variable, \verb'RSTART' 35-36, 41, 189
+\hangindent=3pc \hangafter=1 variable, \verb'RSTART' (变量 \verb'RSTART')
+35-36, 41, 189
 
-\hangindent=3pc \hangafter=1 variable, \verb'SUBSEP' 36, 53
+\hangindent=3pc \hangafter=1 variable, \verb'SUBSEP' (变量 \verb'SUBSEP') 36, 53
 
-\hangindent=3pc \hangafter=1 variables, field 35
+\hangindent=3pc \hangafter=1 variables, field (字段变量) 35
 
-\hangindent=3pc \hangafter=1 variables, global 54,116
+\hangindent=3pc \hangafter=1 variables, global (全局变量) 54,116
 
-\hangindent=3pc \hangafter=1 variables, local 54, 116, 182
+\hangindent=3pc \hangafter=1 variables, local (局部变量) 54, 116, 182
 
-\hangindent=3pc \hangafter=1 variables, numeric 44
+\hangindent=3pc \hangafter=1 variables, numeric (数值变量) 44
 
-\hangindent=3pc \hangafter=1 variables, string 12,44
+\hangindent=3pc \hangafter=1 variables, string (字符串变量) 12,44
 
-\hangindent=3pc \hangafter=1 variables, table of built-in 36
+\hangindent=3pc \hangafter=1 variables, table of built-in (内建变量表格) 36
 
-\hangindent=3pc \hangafter=1 variables, uninitialized 51, 58
+\hangindent=3pc \hangafter=1 variables, uninitialized (未初始化的变量) 51, 58
 
-\hangindent=3pc \hangafter=1 \verb'wc' command 183
+\hangindent=3pc \hangafter=1 \verb'wc' command (命令 \verb'wc') 183
 
-\hangindent=3pc \hangafter=1 \verb'while' statement 15,47
+\hangindent=3pc \hangafter=1 \verb'while' statement (\verb'while' 语句) 15,47
 
-\hangindent=3pc \hangafter=1 \verb'who' command 62
+\hangindent=3pc \hangafter=1 \verb'who' command (变量 \verb'who')62
 
-\hangindent=3pc \hangafter=1 wild-card characters 26
+\hangindent=3pc \hangafter=1 wild-card characters (通配符) 26
 
 \hangindent=3pc \hangafter=1 Williams, J. W. J. 162
 
-\hangindent=3pc \hangafter=1 word count program 14, 119
+\hangindent=3pc \hangafter=1 word count program (单词计数程序) 14, 119
 
-\hangindent=3pc \hangafter=1 \verb'wordfreq' program 119
+\hangindent=3pc \hangafter=1 \verb'wordfreq' program (程序 \verb'wordfreq') 119
 
-\hangindent=3pc \hangafter=1 words, convert numbers to 76
+\hangindent=3pc \hangafter=1 words, convert numbers to (把数字转化成单词) 76
 
-\hangindent=3pc \hangafter=1 \verb'xref' program 122
+\hangindent=3pc \hangafter=1 \verb'xref' program (程序 \verb'xref') 122
 
-\hangindent=3pc \hangafter=1 \verb'yacc' parser generator 152,175
+\hangindent=3pc \hangafter=1 \verb'yacc' parser generator
+(语法分析器生成程序 \verb'yacc') 152,175
 
 \hangindent=3pc \hangafter=1 Yannakakis, M. vi
 
