--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -5,7 +5,8 @@
 \marginpar{205}
 索引中的页码指的是英文原版的页码, 与本书页边标注的页码一致.
 
-\begin{multicols}{3}
+\begin{multicols}{2}
+\setlength\parindent{0pt}
 \small
 \hangindent=3pc \hangafter=1 \verb'&&' AND operator (``与'' 运算符)10, 31, 37, 158
 
