chapter sever reivewed

--- a/latex_src/experiments_with_algorithms.tex
+++ b/latex_src/experiments_with_algorithms.tex
@@ -1027,7 +1027,7 @@ $n \log n$ 程序性能之间的差距急剧加大.
 名字, 然后递减它的每一个后继结点的前驱结点个数. 如果某一个后继结点的前驱
 结点个数变为 0, 那就把这个后继结点插入到队尾. 当队列变成空, 并且所有的结点
 都被访问过, 这时候拓扑排序就完成了. 但是, 如果有某些结点从未被插入到队
-列中, 那就说明这些结点在一个环中, 因此无法对该图进行拓扑排序. 如果图中
+列中, 那就说明这些结点处在环中, 因此无法对该图进行拓扑排序. 如果图中
 不存在环, 那么被打印出来的结点序列就是一个拓扑排序.
 
 \texttt{tsort} 的前三条语句从输入中读取 \mbox{前驱}-后继 对, 并构造一个
