chapter epilog reviewed

--- a/latex_src/epilog.tex
+++ b/latex_src/epilog.tex
@@ -16,11 +16,11 @@
 \label{sec:awk_as_a_language}
 
 关于 awk 的工作开始于 1977 年. 在那时候, 搜索文件的 Unix 程序
-(\texttt{grep} 和 \texttt{sed}) 只支持正则表达式模式, 并且唯一能做的动作
+(\texttt{grep} 和 \texttt{sed}) 只支持正则表达式模式, 并且唯一能做的操作
 只有替换和打印一整行数据, 还不存在字段和非数值操作. 我们当时的目标是
 开发一款模式识别语言, 该语言支持字段, 包括用模式来匹配字段, 以及用动作
 来操作字段. 最初, 我们只能想用它来转换数据, 验证程序的输入, 通过处理
-输出数据来生成报表, 或对它们重新编排, 来作为其他程序的输入.
+输出数据来生成报表, 或对它们重新编排, 以此作为其他程序的输入.
 
 1977 年的 awk 只有很少的内建变量和预定义函数, 当时只是用它来写一些很简短
 的程序, 就像第 \ref{chap:an_awk_tutorial} 章中出现的那些小程序. 后来,
@@ -59,8 +59,8 @@ Awk 的快速传播强有力地推动了语言的发展. 把 awk 作为一门通
 一层语法外衣, 但本质上还是一维数组). 一个更加通用的实现应该支持多维数组,
 至少支持数组元素可以是另外一个数组.
 
-Awk 的主要设施在 1985 年被加入进来, 主要是为了满足用户需求. 添加的
-功能包括动态正则表达式, 新的内建变量与内建函数, 多输入流, 以最重要的用
+Awk 的主要特性在 1985 年被加入进来, 主要是为了满足用户需求. 添加的
+特性包括动态正则表达式, 新的内建变量与内建函数, 多输入流, 以及最重要的用
 户自定义函数.
 
 \texttt{match}, 动态正则表达式和新的字符串替换函数提供了非常有用的功能,
@@ -182,10 +182,11 @@ Awk 并没有内建的计时工具, 因此在本地环境中, 哪些操作属于
 认真编写过的等价的 C 程序相比, 在效率上会差一点. 一般来说, 效率并不会
 成为什么大问题, 所以 awk 既方便使用, 运行起来也足够快.
 
-当 awk 的效率成为一个问题时, 就有必要测一下程序中各个部分的运行时间, 看
+当 awk 的效率成为一个问题时, 就有必要测量一下程序中各个部分的运行时间, 看
 看时间都花在了哪里. 虽然在不同的机器中, 相关操作的开销都会有所不同,
-但是测量技术可以应用在任何一台机器中. 最后, 即使使用底层语言来编写程序
-比较麻烦, 但是原理是相同的, 否则的话, 新程序不仅难以编写, 效率还很低.
+但是测量技术可以应用在任何一台机器中. 最后, 虽然使用低级语言来编写程序
+比较麻烦, 但是也要注意理解程序与时间, 否则的话, 新程序不仅难以编写, 效率 
+还很低.
 
 \section{结论}
 \label{sec:conclusion}
@@ -227,7 +228,7 @@ surprising number of people.}
 
 本书作者写的 ``AWK --- a pattern scanning and processing language'' 描述
 了 awk 的原始版本, 载于 \textit{Software --- Practice and Experience},
-1979 年 4 月. 这篇文章还包括了和语言设计有关的技术性讨论.
+1979 年 4 月, 这篇文章还包括了和语言设计有关的技术性讨论.
 
 Awk 的大部分语法来源于 C 语言, \textit{The C Programming Language} 
 (B. W. Kernighan 和 D. M. Ritchie 著, Prentice-Hall 1978 年出版)
